--- a/style.css
+++ b/style.css
@@ -89,4 +89,13 @@ button {
     background-color: #ff0000;
     color: white;
     border-color: transparent;
+    transition: transform 0.3s ease-in-ease-out;
+}
+button:hover {
+    background-color: #ff8080;
+    transform: scale(1.05);    
+}
+button:focus {
+    background-color: #b30000;
+    transform: scale(0.9);    
 }
