--- a/style.css
+++ b/style.css
@@ -93,9 +93,11 @@ button {
 }
 button:hover {
     background-color: #ff8080;
-    transform: scale(1.05);    
+    transform: scale(1.012);    
 }
-button:focus {
+button:active {
     background-color: #b30000;
-    transform: scale(0.9);    
+    box-shadow: inset 0.8px 0.8px 0.8px 0.8px #1a0000;
+    transform: scale(0.98);    
 }
+
