--- a/style.css
+++ b/style.css
@@ -97,7 +97,8 @@ button:hover {
 }
 button:active {
     background-color: #b30000;
-    box-shadow: inset 0.8px 0.8px 0.8px 0.8px #1a0000;
+    box-shadow: inset 0.3px 0.3px 0.3px 0.3px #990000;
     transform: scale(0.98);    
 }
+
 
