--- a/style.css
+++ b/style.css
@@ -98,8 +98,10 @@ button:hover {
 button:active {
     background-color: #b30000;
     box-shadow: inset 0.1px 0.1px 0.1px 0.1px #990000;
+    color: white;
     transform: scale(0.98);    
 }
+
 
 
 
